# ReAssist

./: .env.example  .gitignore  BLUEPRINT.md  CHANGELOG.md  Dockerfile  INTERVIEW_PREP.md  Makefile  PDF_UPLOAD_GUIDE.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  RESEARCH_EXTENSIONS.md  SETUP_GUIDE.md  STATUS.md  VERIFICATION_GUIDE.md  api.py  auth.py  config.py  database.py  docker-compose.yml  main.py  models.py  prompts.yaml  pyproject.toml  reassist.db  requirements.txt  rewrite_tabs.py  root_agent.py  router.py  show_files.bat  streamlit_app.py  test_setup.py  verify_manual.py
.github/workflows/: ci.yml  main.yml  test.yml
agents/: __init__.py  answer_verifier.py  cot_baseline_agent.py  fair_baseline_agent.py  gap_finder_agent.py  idea_generator_agent.py  query_rewriter.py  rag_retriever_agent.py  relevance_grader.py  search_agent.py  summarize_agent.py  synthesize_agent.py  technique_agent.py  web_search_agent.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_STYLE_GUIDE.md  SETUP_GUIDE.md
evaluation/: .gitkeep  evaluator.py  rag_evaluator.py
frontend/: package-lock.json
logs/: .gitkeep
src/: __init__.py
src/agents/: __init__.py  answer_verifier.py  cot_baseline_agent.py  guidance_agent.py  query_rewriter.py  rag_retriever_agent.py  relevance_grader.py  search_agent.py  summarize_agent.py  synthesize_agent.py
src/api/: app.py  schemas.py  serializers.py
src/config/: prompts.yaml
src/core/: auth.py  config.py  database.py
src/memory/: workspace_memory.py
src/models/: agent_outputs.py  orm.py  state.py
src/pipeline/: graph_builder.py  orchestrator.py
src/rag/: __init__.py  document_processor.py  embeddings.py  retriever.py
src/utils/: __init__.py  (+3 more)
tests/: test_agents.py  test_integration.py  test_router.py  verify_manual.py
utils/: context_slicer.py  helpers.py  pdf_parser.py  token_counter.py
(+17 files in other folders)
